--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,29 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+
+ .nerko-one-regular {
+    font-family: "Nerko One", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
+  
+ h1 {
+    color: #ff9614;
+    font-size: 40px;
+    text-align: center;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 1px #8f8c89;
+    padding: 25px;
+}
+
+/* Responsive layout */
+
+ @media screen and (min-width: 768px) {
+    
+    h1 { 
+        text-align: left;
+    }
+}
+  
