--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,19 @@
     box-sizing: border-box;
 }
 
-
  .nerko-one-regular {
     font-family: "Nerko One", cursive;
     font-weight: 400;
     font-style: normal;
 }
+
+
+.montserrat {
+    font-family: "Montserrat", serif;
+    padding: 25px;
+    background-color: #f6f5f3 ;
+  }
+  
   
  h1 {
     color: #ff9614;
@@ -22,12 +29,51 @@
     padding: 25px;
 }
 
+h2 {
+    padding: 30px 0px;
+}
+
+
+.title {
+    display: none;
+}
+
+img {
+    width: 100%;
+}
+
+.imgyt {
+    display: flex;
+}
+
+.info {
+    display: flex;
+    background-color: #ffffff;
+    box-shadow: rgba(43, 42, 42, 0.35) 0px 3px 5px;
+    padding-left: 40px;
+    padding-bottom: 60px;
+}
+
+
+ul {
+    list-style: none;
+    line-height: 40px;
+}
+
+h3 {
+    padding: 30px 0px;
+}
+
 /* Responsive layout */
 
  @media screen and (min-width: 768px) {
     
     h1 { 
         text-align: left;
+    }
+
+    .title {
+        display: inline;
     }
 }
   
