--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,6 @@
 
  .nerko-one-regular {
     font-family: "Nerko One", cursive;
-    font-weight: 400;
-    font-style: normal;
 }
 
 
@@ -38,7 +36,6 @@ h2 {
     display: none;
 }
 
-
 img {
    width: 100%;
 }
@@ -64,8 +61,45 @@ h3 {
 .icon {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    gap: 30px;
+    margin: 40px 0px;
+
 }
+
+.ciao {
+    display: flex;
+    
+}
+
+.social { 
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-shadow: 1px 1px 1px #8f8c89;
+    background-color: #ffffff;
+    border-radius: 30px;
+}
+
+span {
+    display: none;
+}
+
+.soft {
+    font-weight: lighter;
+}
+
+.banner {
+    display: none;
+}
+
+hr {
+    width: 100px;
+    border: 1px solid #f7972e;
+    margin-bottom: 25px;
+}
+
+
 
 /* Responsive layout */
 
@@ -94,6 +128,27 @@ h3 {
         width: calc(100% / 3 );
     }
 
+    .social {
+        padding-left: 70px;
+        padding-right: 70px;
+        box-shadow: 1px 1px 1px #8f8c89;
+        background-color: #ffffff;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        border-radius: 30px;
+    }
+
+    span {
+        display: none;
+    }
+
+    .banner {
+        display: inline;
+    }
+
+    hr {
+        margin-bottom: 40px;
+    }
 
 }
 
@@ -109,7 +164,7 @@ h3 {
     }
 
     img {
-        width: 70%;
+        width: 100%;
     }
 
     ul .list {
@@ -119,6 +174,21 @@ h3 {
     .info {
         width: 30%;
     } 
+
+    span {
+        display: inline;
+        font-weight: bold;
+    }
+
+    .banner {
+        display: inline;
+    }
+
+    hr {
+        margin-bottom: 40px;
+    }
+
+
 
 }
   
